<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">
    <TextView
        android:id="@+id/constTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_location"
        android:textColor="?attr/colorSecondary"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/geobtn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:background="@drawable/bg_cities"
        android:clickable="true"

        app:layout_constraintTop_toBottomOf="@id/constTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_geo"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textStyle="bold"
                android:textSize="16sp"

                android:text="@string/current_location"
                android:textColor="?attr/colorOnPrimary"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"

                android:text="@string/get_location"
                android:textColor="?attr/colorOnPrimaryContainer"
                />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/constCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cities"
        android:textColor="?attr/colorSecondary"
        android:textStyle="bold"
        android:layout_marginTop="15dp"

        app:layout_constraintTop_toBottomOf="@id/geobtn"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start"

        app:layout_constraintTop_toBottomOf="@id/constCity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/moscowbtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_cities"
            android:clickable="true"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_city"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textStyle="bold"
                    android:textSize="16sp"

                    android:text="@string/Moscow"
                    android:textColor="?attr/colorOnPrimary"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"

                    android:text="@string/Russia"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/stpetersburgbtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_cities"
            android:clickable="true"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_city"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textStyle="bold"
                    android:textSize="16sp"

                    android:text="@string/StPetersburg"
                    android:textColor="?attr/colorOnPrimary"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"

                    android:text="@string/Russia"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/kaliningradbtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_cities"
            android:clickable="true"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_city"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textStyle="bold"
                    android:textSize="16sp"

                    android:text="@string/Kaliningrad"
                    android:textColor="?attr/colorOnPrimary"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"

                    android:text="@string/Russia"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/rostowbtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_cities"
            android:clickable="true"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_city"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textStyle="bold"
                    android:textSize="16sp"

                    android:text="@string/Rostov"
                    android:textColor="?attr/colorOnPrimary"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"

                    android:text="@string/Russia"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/stavropolbtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_cities"
            android:clickable="true"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_city"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textStyle="bold"
                    android:textSize="16sp"

                    android:text="@string/Stavropol"
                    android:textColor="?attr/colorOnPrimary"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"

                    android:text="@string/Russia"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/kazanbtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_cities"
            android:clickable="true"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_city"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textStyle="bold"
                    android:textSize="16sp"

                    android:text="@string/Kazan"
                    android:textColor="?attr/colorOnPrimary"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"

                    android:text="@string/Russia"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dubaibtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_cities"
            android:clickable="true"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_city"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textStyle="bold"
                    android:textSize="16sp"

                    android:text="@string/Dubai"
                    android:textColor="?attr/colorOnPrimary"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"

                    android:text="@string/OAE"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>